converting last css styling to proper classes

--- a/css/grade-sheet.css
+++ b/css/grade-sheet.css
@@ -57,3 +57,10 @@ label {
 .full-width {
     width: 100%;
 }
+
+.alice-blue {
+    background-color: AliceBlue;
+}
+.lemon-chiffon {
+    background-color: LemonChiffon;
+}
